# yazelix-ghostty-cursors

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
src/: lib.rs
